tests/fail/cyclic_dependency.hs
let c = import "tests/cyclic_dependency.hs"
in 1
